# openMagazine

./: .gitignore  AGENTS.md  AGENT_GUIDE.md  CLAUDE.md  CODEX.md  Makefile  PROJECT_CONTEXT.md  README.md  SKILL.md  config.yaml  pyproject.toml
.agents/skills/: codex-image-gen-plumbing.md  photo-realism-prompts.md  pillow-image-ops.md  prompt-engineering-3-block.md  reportlab-typography.md  vertex-gemini-image-prompt-tips.md
docs/: ARCHITECTURE.md  PROVIDERS.md  ROADMAP.md  SCHEMA_V2_MIGRATION.md  SMOKE_TEST.md  SMOKE_TEST_v0.3.md  component-registry-reference.md  design-system-reference.md  pipeline-flow.html  profiles-reference.md  regions-reference.md  spread-types-reference.md  typography-pack-cookbook.md  v0.3-ARCHITECTURE.md
examples/: README.md
lib/: article_patch.py  checkpoint.py  config_loader.py  cost_tracker.py  design_system_loader.py  font_resolver.py  manifest_to_html.py  placeholder_resolver.py  prompt_builder.py  prompt_builder_v2.py  prompt_persistence.py  regions_loader.py  slide_manifest_builder.py  spec_loader.py  storyboard_planner.py
pipeline_defs/: editorial-16page.yaml  smoke-test-4page.yaml
schemas/: claim_spine.schema.json  components-registry.schema.json  design-system.schema.json  imagegen_prompt.schema.json  profile.schema.json  regions.schema.json
skills/: INDEX.md
styles/: README.md  burberry-heritage.yaml  dreamy-warm.yaml  hokusai-ukiyo.yaml  hopper-quiet.yaml  kinfolk.yaml  matisse-fauve.yaml  national-geographic.yaml  vogue-italia.yaml  wes-anderson.yaml
tests/: conftest.py
tools/: base_tool.py  tool_registry.py
(+110 files in other folders)
