[project]
name = "openmagazine"
version = "0.1.0"
description = "Agentic photo magazine generation skill (openMagazine v0.1)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "google-genai>=2.0",
  "pillow>=10.0",
  "reportlab>=4.0",
  "pyyaml>=6.0",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools", "lib"]
